Changed pao button background color to fix contrast issue

--- a/assets/memoryTips.css
+++ b/assets/memoryTips.css
@@ -205,7 +205,7 @@ nav {
     text-shadow: -1px -1px 2px #000, 1px -1px 2px #000, -1px 1px 2px #000, 1px 1px 2px #000;
     border-radius: 10px;
     border: none;
-    background-color: #89B5AF;
+    background-color: #379683;
 }
 
 #PDFButton:hover {
